--- a/style.css
+++ b/style.css
@@ -5,23 +5,58 @@
 }
 
 body{
-    background-color: gray;
+    background: linear-gradient(to right top, pink, purple);
     margin: 0px;
 }
 
+/* Calculator Body */
 .calc-container{
     display: grid;
-    grid-template-columns: repeat(4, 50px);
-    grid-template-rows: repeat(6, 50px);
-    
+    grid-template-columns: repeat(4, 75px);
+    grid-template-rows: repeat(7, 75px);
     justify-content: center;
-    align-content: center;
+    min-height: 100vh;
 }
+    /* buttons */
+    .multiply{
+        padding-top: 7px;
+    }
 
-.span-2{
-    grid-column: span 2;
-}
+    .span-2.horizontal{
+        grid-column: span 2;
+    }
+
+    .span-2.vertical{
+        grid-row: span 2;
+    }
+
+    button{
+        background-color: #ffffffca;
+    }
+
+    button:hover{
+        background-color: grey;
+    }
 
 .display{
+    display: flex;
+    flex-direction: column;
     grid-column: 1 / -1;
+    background-color: #00000085;
+    padding: 12px;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    word-wrap:break-word;
+    word-break: break-all;
+
 }
+    .display .previous-op{
+        /* display: none; to be hidden after this project is finalized */
+        color: white;
+        font-size: 1rem;
+    }
+
+    .display .current-op{
+        color: white;
+        font-size: 2.5rem;
+    }
