--- a/style.css
+++ b/style.css
@@ -62,13 +62,13 @@ body{
     word-break: break-all;
 
 }
-    .display .previous-op{
+    .display .primary{
         /* display: none; to be hidden after this project is finalized */
         color: white;
-        font-size: 1rem;
+        font-size: 2rem;
     }
 
-    .display .current-op{
-        color: white;
-        font-size: 2.5rem;
+    .display .secondary{
+        color: rgba(255, 255, 255, 200);
+        font-size: 1.5rem;
     }
